Fixed an issue where static code is ignored